<resources>
    <string name="app_name">PayMe</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="activity_main.tabs.medeben">ME DEBE</string>
    <string name="activity_main_tabs_lesdebo">LE DEBO</string>
    <string name="activity_main_tabs_cuenta">CUENTA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola desde mi Fragment</string>
    <string name="create_deb_activity_title">Crear Compromiso</string>
    <string name="activity_create_debt_save_menu_title">Crear Deuda</string>
    <string name="activity_create_debt_select_contact_title">Seleccionar contacto...</string>
    <string name="create_debt_activity_invalid_contact_selection">Contacto no valido. Seleccione uno que tenga celular.</string>
    <string name="create_debt_activity_invalid_total_amount">Invalid total value</string>
    <string name="create_debt_activity_invalid_concept">Invalid Concept value.</string>
    <string name="fragment_list_close_debt">Cerrar Deuda</string>
    <string name="fragment_list_delete_debt">Borrar</string>
    <string name="action_archive_debt_title">Archivar Cuenta</string>

    <string name="password_activity_wrong_password">Contraseña incorrecta</string>

    <!--meses-->
    <string name="month_january">ENE</string>
    <string name="month_february">FEB</string>
    <string name="month_march">MAR</string>
    <string name="month_april">ABR</string>
    <string name="month_may">MAY</string>
    <string name="month_june">JUN</string>
    <string name="month_july">JUL</string>
    <string name="month_august">AGO</string>
    <string name="month_september">SEP</string>
    <string name="month_october">OCT</string>
    <string name="month_november">NOV</string>
    <string name="month_december">DIC</string>
    <string name="action_about">About</string>

    <string name="title_activity_settings">Preferencias</string>


    <!-- Preferences -->
    <string name="preference_password_enabled">Protegerme</string>
    <string name="preference_password_enabled_detail">Habilitar acceso a la aplicación utilizando una contraseña segura.</string>
    <string name="preference_password_value">Contraseña</string>
    <string name="preference_password_value_detail">Establece una contraseña compuesta de 4 números.</string>
    <string name="preference_password_value_title">Ingrese su contaseña</string>

    <!-- Strings related to Settings -->

    <!--&lt;!&ndash; Example General settings &ndash;&gt;-->
    <!--<string name="pref_header_general">General</string>-->

    <!--<string name="pref_title_social_recommendations">Enable social recommendations</string>-->
    <!--<string name="pref_description_social_recommendations">Recommendations for people to contact-->
        <!--based on your message history-->
    <!--</string>-->

    <!--<string name="pref_title_display_name">Display name</string>-->
    <!--<string name="pref_default_display_name">John Smith</string>-->

    <!--<string name="pref_title_add_friends_to_messages">Add friends to messages</string>-->
    <!--<string-array name="pref_example_list_titles">-->
        <!--<item>Always</item>-->
        <!--<item>When possible</item>-->
        <!--<item>Never</item>-->
    <!--</string-array>-->
    <!--<string-array name="pref_example_list_values">-->
        <!--<item>1</item>-->
        <!--<item>0</item>-->
        <!--<item>-1</item>-->
    <!--</string-array>-->

    <!--&lt;!&ndash; Example settings for Data & Sync &ndash;&gt;-->
    <!--<string name="pref_header_data_sync">Data &amp; sync</string>-->

    <!--<string name="pref_title_sync_frequency">Sync frequency</string>-->
    <!--<string-array name="pref_sync_frequency_titles">-->
        <!--<item>15 minutes</item>-->
        <!--<item>30 minutes</item>-->
        <!--<item>1 hour</item>-->
        <!--<item>3 hours</item>-->
        <!--<item>6 hours</item>-->
        <!--<item>Never</item>-->
    <!--</string-array>-->
    <!--<string-array name="pref_sync_frequency_values">-->
        <!--<item>15</item>-->
        <!--<item>30</item>-->
        <!--<item>60</item>-->
        <!--<item>180</item>-->
        <!--<item>360</item>-->
        <!--<item>-1</item>-->
    <!--</string-array>-->

    <!--<string name="pref_title_system_sync_settings">System sync settings</string>-->

    <!--&lt;!&ndash; Example settings for Notifications &ndash;&gt;-->
    <!--<string name="pref_header_notifications">Notifications</string>-->

    <!--<string name="pref_title_new_message_notifications">New message notifications</string>-->

    <!--<string name="pref_title_ringtone">Ringtone</string>-->
    <!--<string name="pref_ringtone_silent">Silent</string>-->

    <!--<string name="pref_title_vibrate">Vibrate</string>-->
</resources>
