<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- A 'parent' preference, which enables/disables child preferences (below)
            when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="password_enabled"
        android:title="@string/preference_password_enabled"
        android:summary="@string/preference_password_enabled_detail"
        />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:dependency="password_enabled"
        android:key="password_value"
        android:inputType="number"
        android:maxLength="4"
        android:dialogTitle="@string/preference_password_value_title"
        android:summary="@string/preference_password_value_detail"
        android:title="@string/preference_password_value" />
</PreferenceScreen>